--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -20,7 +20,20 @@
         <!-- 回答はクラスq3の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3">
-          
+          <table class="q3__content">
+            <thead>
+              <tr class="q3__content__text"><th>日付</th><th>朝ごはん</th><th>昼ごはん</th><th>おやつ</th><th>夜ご飯</th><th>夜食</th></tr>
+            </thead>
+            <tbody class="q3__content__list">
+              <tr class="q3__content__text"><td>2016/04/01</td><td>食パン</td><td>チャーハン</td><td>杏仁豆腐</td><td>舞茸丼</td><td>いちご</td></tr>
+              <tr class="q3__content__text"><td>2016/04/02</td><td>なし</td><td>ケバブ丼</td><td>ゼリー</td><td>唐揚げ定食</td><td>いちご</td></tr>
+              <tr class="q3__content__text"><td>2016/04/03</td><td>納豆ご飯</td><td>まぐろ定食</td><td>チョコパン</td><td>餃子定食</td><td>チョコ</td></tr>
+              <tr class="q3__content__text"><td>2016/04/04</td><td>食パン</td><td>牛丼</td><td>アイス</td><td>豚丼</td><td>スムージー</td></tr>
+            </tbody>
+            <tfoot>
+              <tr class="q3__content__text"><th>合計カロリー</th><th>10000kcal</th><th>12000kcal</th><th>3000kcal</th><th>30000kcal</th><th>1000kcal</th></tr>
+            </tfoot>
+          </table>
         </div>
         <!-- 回答はクラスq3の要素の中に書いてね -->
       </div>
