--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -20,16 +20,16 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q4 q4__content">
+          <div class="q4__content__box">
+            <div class="q4__content__item1">固定</div>
+            <div class="q4__content__item2">可変</div>
+            <div class="q4__content__item3">固定</div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="q4__content__box">
+            <div class="q4__content__item4">可変</div>
+            <div class="q4__content__item5">可変</div>
+            <div class="q4__content__item6">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
