--- a/layout_parts/q2/index.html
+++ b/layout_parts/q2/index.html
@@ -22,7 +22,7 @@
         <div class="q2 q2__content">
           <div class="q2__content__box">
             <div>
-              <div class="q2__content__img1">
+              <div class="q2__content__img__left">
                 <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg" alt="">
               </div>
               <p class="q2__content__text">
@@ -32,7 +32,7 @@
               </p>
             </div>
             <div>
-              <div class="q2__content__img2">
+              <div class="q2__content__img__right">
                 <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_2.jpg" alt="">
               </div>
               <p class="q2__content__text">
