--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -24,7 +24,7 @@
             <thead>
               <tr class="q3__content__text"><th>日付</th><th>朝ごはん</th><th>昼ごはん</th><th>おやつ</th><th>夜ご飯</th><th>夜食</th></tr>
             </thead>
-            <tbody class="q3__content__list">
+            <tbody class="q3__content__texts">
               <tr class="q3__content__text"><td>2016/04/01</td><td>食パン</td><td>チャーハン</td><td>杏仁豆腐</td><td>舞茸丼</td><td>いちご</td></tr>
               <tr class="q3__content__text"><td>2016/04/02</td><td>なし</td><td>ケバブ丼</td><td>ゼリー</td><td>唐揚げ定食</td><td>いちご</td></tr>
               <tr class="q3__content__text"><td>2016/04/03</td><td>納豆ご飯</td><td>まぐろ定食</td><td>チョコパン</td><td>餃子定食</td><td>チョコ</td></tr>
