--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -21,15 +21,15 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4 q4__content">
-          <div class="q4__content__box">
-            <div class="q4__content__items pink">固定</div>
-            <div class="q4__content__items purple">可変</div>
-            <div class="q4__content__items blue">固定</div>
+          <div class="q4__content__boxes">
+            <div class="q4__content__box pink">固定</div>
+            <div class="q4__content__box purple">可変</div>
+            <div class="q4__content__box blue">固定</div>
           </div>
-          <div class="q4__content__box">
-            <div class="q4__content__items yellow">可変</div>
-            <div class="q4__content__items red">可変</div>
-            <div class="q4__content__items green">固定</div>
+          <div class="q4__content__boxes">
+            <div class="q4__content__box yellow">可変</div>
+            <div class="q4__content__box red">可変</div>
+            <div class="q4__content__box green">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
