--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -47,7 +47,7 @@
           <div class="q7 q7--table">
             <div class="q7__inner q7__box__tables">
               <div class="q7__box q7__box__table">
-                <div class="q7__box__item q7__box__text is-item-current">
+                <div class="q7__box__text q7__box__item is-item-current">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
