--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -26,7 +26,7 @@
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
               <div class="q6__box__top">
-                <p class="q6__box__top__text">text-align</p>
+                <p class="q6__top__text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -34,7 +34,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p class="q6__box__top__text q6__box__right">margin</p>
+              <p class="q6__top__text q6__box__right">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -47,9 +47,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around q6__box__middle">
-            <div class="q6__box__middle__head">
-              <p class="q6__box__middle__text">table</p>
+          <div class="q6 q6--around q6__table">
+            <div class="q6__table__box">
+              <p class="q6__table__text">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -57,8 +57,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around q6__box__middle__foot">
-            <p class="q6__box__middle__text">flex</p>
+          <div class="q6 q6--around q6__flex">
+            <p class="q6__table__text">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
@@ -66,16 +66,16 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable q6__box__bottom">
-              <p class="q6__box__inner q6__box__hard">position固定</p>
+            <div class="q6__box is-stable q6__position">
+              <p class="q6__box__inner q6__position__hard">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
 
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible q6__box__bottom">
-              <p class="q6__box__inner q6__box__change">position可変</p>
+            <div class="q6__box is-flexible q6__position">
+              <p class="q6__box__inner q6__position__change">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
