--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -46,8 +46,8 @@
                 <td>納豆ご飯</td>
                 <td>まぐろ定食</td>
                 <td>チョコパン</td>
-                <td>餃子定食</td><
-                  td>チョコ</td>
+                <td>餃子定食</td>
+                <td>チョコ</td>
                 </tr>
               <tr>
                 <th>2016/04/04</th>
