--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -26,7 +26,7 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--float">
             <div class="q7__inner clearfix">
-              <div class="q7__box q7__box__item is-item-current q7__box__push">
+              <div class="q7__box q7__box__item q7__box__push">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
               <div class="q7__box q7__box__item q7__box__push">
@@ -47,12 +47,12 @@
           <div class="q7 q7--table">
             <div class="q7__inner q7__box__tables">
               <div class="q7__box q7__box__table">
-                <div class="q7__box__text q7__box__item is-item-current">
+                <div class="q7__box__text q7__box__item">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
-              <div class="q7__box q7__box__table">
-                <div class="q7__box__text q7__box__item">
+              <div class="q7__box q7__box__table is-table-current">
+                <div class="q7__box__text q7__box__item ">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
                 </div>
               </div>
@@ -70,7 +70,7 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
             <div class="q7__inner q7__box__wrapper">
-              <div class="q7__box q7__box__item is-item-current q7__box__container">
+              <div class="q7__box q7__box__item  q7__box__container">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
               <div class="q7__box q7__box__item q7__box__container">
@@ -90,10 +90,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--flex">
             <div class="q7__inner  q7__box__flex">
-              <div class="q7__box q7__box__item is-item-current">
+              <div class="q7__box q7__box__item">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7__box__item is-item-current">
+              <div class="q7__box q7__box__item is-flex-current">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
